--- a/styles/FriendsList.module.css
+++ b/styles/FriendsList.module.css
@@ -38,7 +38,16 @@
 .friendDisplay {
 	display: flex;
 	align-items: center;
+	padding: 0.25rem 1rem;
+	border-radius: 10px;
 }
+
+.friendDisplay:hover {
+	color: white;
+	cursor: pointer;
+	background-color: rgb(72, 71, 71);
+}
+
 .friendsName {
 	margin-left: 1rem;
 }
