--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -8,7 +8,7 @@
 	height: 6rem;
 	align-items: center;
 	justify-content: space-between;
-	padding: 1rem;
+	padding: 2rem 1rem 1rem 1rem;
 }
 
 .songDetails {
