--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: black;
-	padding: 1.5rem 0.5rem;
+	/* padding: 1.5rem 0.5rem; */
 	/* position: relative; */
 }
 
@@ -54,46 +54,6 @@
 .description {
 	line-height: 1.5;
 	font-size: 1.5rem;
-}
-
-.grid {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-
-	max-width: 800px;
-	margin-top: 3rem;
-}
-
-.card {
-	margin: 1rem;
-	flex-basis: 45%;
-	padding: 1.5rem;
-	text-align: left;
-	color: inherit;
-	text-decoration: none;
-	border: 1px solid #eaeaea;
-	border-radius: 10px;
-	transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-	color: #0070f3;
-	border-color: #0070f3;
-}
-
-.card h3 {
-	margin: 0 0 1rem 0;
-	font-size: 1.5rem;
-}
-
-.card p {
-	margin: 0;
-	font-size: 1.25rem;
-	line-height: 1.5;
 }
 
 .logo {
