--- a/styles/global.css
+++ b/styles/global.css
@@ -14,11 +14,11 @@ a {
 	text-decoration: none;
 }
 
-* {
+/* * {
 	box-sizing: border-box;
-}
+} */
 
-img {
+/* img {
 	max-width: 100%;
 	height: auto;
-}
+} */
