--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,18 @@
 html,
 body,
 * {
-	padding: 0;
-	margin: 0;
 	font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background-color: black;
+	/* background-color: black; */
+	/* width: 100vw; */
+}
+
+html,
+body {
+	padding: 0;
+	margin: 0;
 	width: 100vw;
+	height: 100vh;
 }
 
 a {
@@ -14,9 +20,9 @@ a {
 	text-decoration: none;
 }
 
-/* * {
+* {
 	box-sizing: border-box;
-} */
+}
 
 /* img {
 	max-width: 100%;
