--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -52,7 +52,7 @@
 	margin-top: 1rem;
 }
 
-.searchNavButtons a {
+.searchNavButtons p {
 	text-decoration: none;
 	background-color: black;
 	text-align: center;
