--- a/styles/global.css
+++ b/styles/global.css
@@ -11,8 +11,10 @@ html,
 body {
 	padding: 0;
 	margin: 0;
+	/* padding-left: 200px; */
 	width: 100vw;
 	height: 100vh;
+	overflow-y: hidden;
 }
 
 a {
@@ -28,3 +30,13 @@ a {
 	max-width: 100%;
 	height: auto;
 } */
+
+@media screen and (min-width: 1700px) {
+	html {
+		background-color: black;
+	}
+	body {
+		max-width: 1700px;
+	}
+	/* hide it elsewhere */
+}
