--- a/styles/ShareCard.module.css
+++ b/styles/ShareCard.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	border-radius: 1rem;
-	padding: 2rem 2rem 1rem 2rem;
+	padding: 2rem;
 	margin-top: 1.5rem;
 	/* margin-left: auto;
 	margin-right: auto; */
