--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,45 +1,88 @@
 /* Login.module.css */
+
+.mainContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    /* height: 800px; */
+    height: calc(100vh - 1rem);
+    margin: auto;
+    background-color: rgb(42, 41, 41);
+}
+
 .container {
-    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    color: deepskyblue;
+    width: 30%;
+    height: 550px;
     margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .group {
+    /* background-color: lightgray; */
+}
+
+.title {
+    font-size: 60px;
+}
+
+.header {
+    font-size: 40px;
+}
+
+
+.form{
+    text-align: center;
+}
+.formGroup {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-bottom: 15px;
-  }
-  
-  .password {
+    width: 200px;
+    text-align: center;
+}
+
+.password {
     display: block;
     margin-bottom: 5px;
-  }
-  
-  .input{
+}
+
+.label {
+    font-size: 25px;
+}
+
+.input {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
-  }
-  
-  .button {
+    width: 300px;
+}
+
+.button {
+    margin: auto;
     background-color: #007bff;
     color: #fff;
     padding: 10px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
     background-color: #0056b3;
-  }
-  
-  .error {
+}
+
+.error {
     color: red;
     margin-top: 10px;
-  }
-  
+}
