--- a/styles/ShareCard.module.css
+++ b/styles/ShareCard.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	border-radius: 1rem;
 	padding: 2rem;
-	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
 	/* margin-left: auto;
 	margin-right: auto; */
 	background-color: black;
