--- a/styles/FriendsList.module.css
+++ b/styles/FriendsList.module.css
@@ -89,7 +89,7 @@
 
 .friendDisplayContainer:hover .friendDisplayModal {
 	visibility: visible;
-	transition: 1s ease-in 0.5s ease-out;
+	transition: 2s ease-out;
 }
 
 .friendDisplayTop {
