--- a/styles/ShareCard.module.css
+++ b/styles/ShareCard.module.css
@@ -8,6 +8,8 @@
 	margin-right: auto; */
 	background-color: black;
 	/* min-width: 550px; */
+	overflow-x: visible;
+	position: relative;
 }
 
 .shareCardContainer h4 {
@@ -17,7 +19,6 @@
 	display: flex;
 	align-items: center;
 	margin-left: 1rem;
-	position: relative;
 }
 
 .shareCardDetails {
@@ -86,13 +87,42 @@
 	color: white;
 }
 
-.removeShare {
+.removeBtnContainer {
+	overflow-x: visible;
+}
+.removeShareContainer {
 	position: absolute;
-	right: 0;
-	top: 0;
+	right: 2rem;
+	top: 1.5rem;
 }
 
 .removeShare:hover {
 	cursor: pointer;
 	color: white;
+	transition: all 0.5s ease;
+}
+
+.removeShareBtn {
+	position: absolute;
+	right: 0;
+	top: 1.5rem;
+	color: black;
+	background-color: lightgray;
+	padding: 0.5rem;
+	border-radius: 0.5rem;
+	overflow: visible;
+	font-size: 14px;
+	width: fit-content;
+	white-space: nowrap;
+	z-index: 1;
+	visibility: hidden;
+}
+
+.removeShareBtn:hover {
+	cursor: pointer;
+}
+
+.removeShareContainer:hover .removeShareBtn {
+	visibility: visible;
+	transition: 0.5s ease-in 2s ease-out;
 }
