--- a/styles/FriendsList.module.css
+++ b/styles/FriendsList.module.css
@@ -114,6 +114,8 @@
 .chatButton {
 	background-color: lightblue;
 	margin-top: 0.5rem;
+	border-radius: 0.5rem;
+	padding: 0.5rem;
 }
 
 @media (max-width: 1350px) {
