--- a/styles/Signin.module.css
+++ b/styles/Signin.module.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items:center;
-  justify-content:center;
+  justify-content:end;
   background-color: black;
   color: deepskyblue;
   width: 25%;
@@ -35,7 +35,7 @@
   padding: 20px;
   border: 1px solid #ccc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-   background-color: lightgray; 
+  /* background-color: lightgray;  */
 } 
 
 .title {
@@ -48,10 +48,11 @@
   font-size: 40px;
 }
 
-
 .form{
   text-align: center;
+  padding:70px;
 }
+
 .formGroup {
   display: flex;
   flex-wrap: wrap;
@@ -80,9 +81,9 @@
 }
 
 .button {
-  width:80px;
+  width:200px;
   margin: auto;
-  background-color: deepskyblue;
+  background-color:aquamarine;
   /* background-color: #007bff; */
   color: #fff;
   padding: 10px;
