--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,36 +1,43 @@
-/* Login.module.css */
-
 .mainContainer {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	max-width: 100%;
-	/* height: 800px; */
 	height: calc(100vh - 1rem);
 	margin: auto;
 	background-color: rgb(42, 41, 41);
 }
 
+.image {
+	top: 0px;
+	left: 0px;
+	width: 1025px;
+	height: 940px;
+	background-position: left start;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
-	/* flex-wrap: wrap; */
 	align-items: center;
-	justify-content: center;
+	justify-content: end;
 	background-color: black;
 	color: deepskyblue;
-	width: 30%;
-	height: 550px;
-	margin: auto;
+	width: 25%;
+	height: 900px;
+	margin: 0;
 	padding: 20px;
 	border: 1px solid #ccc;
-	border-radius: 15px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	/* background-color: lightgray; */
+	/* background-color: lightgray;  */
 }
 
 .title {
 	font-size: 60px;
+	font-family: cursive;
+	font-weight: 900;
 }
 
 .header {
@@ -39,13 +46,16 @@
 
 .form {
 	text-align: center;
+	padding: 70px 70px 150px;
 }
+
 .formGroup {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin-bottom: 15px;
-	width: 200px;
+	margin-bottom: 45px;
+	width: 300px;
+	height: 50px;
 	text-align: center;
 }
 
@@ -64,13 +74,18 @@
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	box-sizing: border-box;
-	width: 300px;
+	/* width: 350px; */
 }
 
 .button {
+	font-size: 20px;
+	font-weight: bolder;
+	color: black;
+	width: 298px;
+	height: 50px;
 	margin: auto;
-	background-color: #007bff;
-	color: #fff;
+	background-color: aquamarine;
+	margin-bottom: 45px;
 	padding: 10px;
 	border: none;
 	border-radius: 3px;
