--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -98,7 +98,7 @@
     background-color: rgb(42, 41, 41);
 }
 
-.image {
+.mainImage {
     top: 0px;
     left: 0px;
     width: 1025px;
@@ -108,6 +108,9 @@
     background-repeat: no-repeat;
 }
 
+/* .formImage{
+
+} */
 
 .container {
     display: flex;
