--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,93 +1,3 @@
-/* Login.module.css */
-/*
-.mainContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 100%;
-    /* height: 800px; 
-    height: calc(100vh - 1rem);
-    margin: auto;
-    background-color: rgb(42, 41, 41);
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap: wrap; 
-    align-items: center;
-    justify-content: center;
-    background-color: black;
-    color: deepskyblue;
-    width: 30%;
-    height: 550px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: lightgray;
-}
-
-.title {
-    font-size: 60px;
-}
-
-.header {
-    font-size: 40px;
-}
-
-
-.form{
-    text-align: center;
-}
-.formGroup {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 15px;
-    width: 200px;
-    text-align: center;
-}
-
-.password {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.label {
-    font-size: 25px;
-}
-
-.input {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-    width: 300px;
-}
-
-.button {
-    margin: auto;
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.button:hover {
-    background-color: #0056b3;
-}
-
-.error {
-    color: red;
-    margin-top: 10px;
-} 
-*/
-
 .mainContainer {
     display: flex;
     align-items: center;
@@ -103,14 +13,15 @@
     left: 0px;
     width: 1025px;
     height: 940px;
-    background-position: left start;
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* background-position: left start; */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    object-fit: cover;
 }
 
-/* .formImage{
-
-} */
+.formImage {
+    margin-top: 150px;
+}
 
 .container {
     display: flex;
@@ -121,7 +32,7 @@
     color: deepskyblue;
     width: 25%;
     height: 900px;
-    margin: 0;
+    margin-top: 75px;
     padding: 20px;
     border: 1px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -149,7 +60,7 @@
     justify-content: center;
     margin-bottom: 45px;
     width: 300px;
-    height: 50px;
+    height: 40px;
     text-align: center;
 }
 
@@ -176,7 +87,7 @@
     font-weight: bolder;
     color: black;
     width: 298px;
-    height: 50px;
+    height: 40px;
     margin: auto;
     background-color: aquamarine;
     margin-bottom: 45px;
