--- a/styles/Signin.module.css
+++ b/styles/Signin.module.css
@@ -1,103 +1,210 @@
-/* Login.module.css */
-
-
 .mainContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 100%;
-  height: calc(100vh - 1rem);
-  margin: auto;
-  background-color: rgb(42, 41, 41);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 100%;
+	height: calc(100vh - 1rem);
+	margin: auto;
+	background-color: rgb(42, 41, 41);
 }
 
 .mainImage {
-  top: 0px;
-  left: 0px;
-  width: 1025px;
-  height: 940px;
-  /* background-position: left start;
-  background-size: cover;
-  background-repeat: no-repeat; */
-  object-fit: cover;
+	top: 0px;
+	left: 0px;
+	width: 1425px;
+	height: 940px;
+	/* background-position: left start;
+	background-size: cover;
+	background-repeat: no-repeat; */
+	object-fit: cover;
 }
 
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
-  background-color: black;
-  color: deepskyblue;
-  width: 25%;
-  height: 900px;
-  margin-top: 0;
-  padding: 20px;
-  border: 1px solid #ccc;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* background-color: lightgray;  */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: end;
+	background-color: black;
+	color: deepskyblue;
+	width: 25%;
+	height: 900px;
+	margin-top: 0;
+	padding: 20px;
+	border: 1px solid #ccc;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	/* background-color: lightgray;  */
 }
 
 .title {
-  font-size: 60px;
-  font-family: cursive;
-  font-weight: 900;
+	font-size: 60px;
+	font-family: cursive;
+	font-weight: 900;
 }
 
 .header {
-  font-size: 40px;
+	font-size: 40px;
 }
 
 .form {
-  text-align: center;
-  padding: 70px;
+	text-align: center;
+	padding: 70px;
 }
 
 .formGroup {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 25px;
-  width: 250px;
-  text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-bottom: 25px;
+	width: 250px;
+	text-align: center;
 }
 
 .password {
-  display: block;
-  margin-bottom: 5px;
+	display: block;
+	margin-bottom: 5px;
 }
 
 .label {
-  font-size: 25px;
+	font-size: 25px;
 }
 
 .input {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-sizing: border-box;
-  width: 300px;
+	width: 100%;
+	padding: 8px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	box-sizing: border-box;
+	width: 300px;
 }
 
 .button {
-  width: 250px;
-  font-weight:bolder ;
-  margin: auto;
-  background-color: aquamarine;
-  color:black;
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
+	width: 250px;
+	font-weight: bolder;
+	margin: auto;
+	background-color: aquamarine;
+	color: black;
+	padding: 10px;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
 }
 
 .button:hover {
-  background-color: #0056b3;
+	background-color: #0056b3;
 }
 
 .error {
-  color: red;
-  margin-top: 10px;
+	color: red;
+	margin-top: 10px;
 }
+
+@media screen and (min-width: 1250px) {
+	.mainContainer {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		max-width: 100%;
+		height: calc(100vh - 1rem);
+		margin: auto;
+		background-color: rgb(42, 41, 41);
+	}
+	
+	.mainImage {
+		top: 0px;
+		left: 0px;
+		width: 1025px;
+		height: 940px;
+		/* background-position: left start;
+		background-size: cover;
+		background-repeat: no-repeat; */
+		object-fit: cover;
+	}
+
+	.formImage{
+		width: 200px;
+		height:150px;
+	}
+	
+	
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: end;
+		background-color: black;
+		color: deepskyblue;
+		width: 25%;
+		height: 900px;
+		margin-top: 0;
+		padding: 20px;
+		border: 1px solid #ccc;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		/* background-color: lightgray;  */
+	}
+	
+	.title {
+		font-size: 60px;
+		font-family: cursive;
+		font-weight: 900;
+	}
+	
+	.header {
+		font-size: 40px;
+	}
+	
+	.form {
+		text-align: center;
+		padding: 70px;
+	}
+	
+	.formGroup {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-bottom: 25px;
+		width: 250px;
+		text-align: center;
+	}
+	
+	.password {
+		display: block;
+		margin-bottom: 5px;
+	}
+	
+	.label {
+		font-size: 25px;
+	}
+	
+	.input {
+		width: 100%;
+		padding: 8px;
+		border: 1px solid #ccc;
+		border-radius: 3px;
+		box-sizing: border-box;
+		width: 300px;
+	}
+	
+	.button {
+		width: 250px;
+		font-weight: bolder;
+		margin: auto;
+		background-color: aquamarine;
+		color: black;
+		padding: 10px;
+		border: none;
+		border-radius: 3px;
+		cursor: pointer;
+	}
+	
+	.button:hover {
+		background-color: #0056b3;
+	}
+	
+	.error {
+		color: red;
+		margin-top: 10px;
+	}
+	
+  }
+  
