update userId for favorites page

--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -11,38 +11,8 @@
 }
 
 .pfpImgContainer {
-	position: relative;
-}
-
-.pfpImgContainer:hover {
-	cursor: pointer;
-}
-
-.profileModal {
 	display: flex;
-	flex-direction: column;
-	background-color: rgb(212, 212, 212);
-	position: absolute;
-	z-index: 1;
-	top: 6.5rem;
-	left: 3rem;
-	padding: 1rem;
-	width: 150px;
-	border-radius: 0.5rem;
-	visibility: hidden;
-	/* justify-content: space-between; */
-	/* height: 110px; */
-}
-
-.profileModal > h3 {
-	padding: 0.5rem 0;
-	border-bottom: 1px solid black;
-	margin: 0;
-}
-
-.pfpImgContainer:hover .profileModal {
-	visibility: visible;
-	/* transition: 2s ease-out; */
+	position: relative;
 }
 
 .modalBtn {
@@ -57,7 +27,17 @@
 
 .pfpImg {
 	border-radius: 50%;
+	z-index: 5;
+	position: absolute;
 }
+
+.logoImg {
+	display: flex;
+	margin-left: 75px;
+	position: absolute;
+	top: -50px;
+}
+
 .navLink {
 	display: flex;
 	margin: 1rem;
