--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -8,11 +8,14 @@
 	height: 100px;
 	margin-bottom: 1rem;
 	padding-left: 1rem;
+	position: relative;
 }
 
 .pfpImgContainer {
 	display: flex;
 	position: relative;
+	width: 100px;
+	height: 100px;
 }
 
 .modalBtn {
@@ -26,6 +29,8 @@
 }
 
 .pfpImg {
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	z-index: 5;
 	position: absolute;
@@ -178,5 +183,18 @@
 	.sidebarContainer {
 		width: 100px;
 		min-width: 100px;
+	}
+
+	.pfpImgContainer {
+		width: 80px;
+		height: 80px;
+	}
+
+	.logoImg {
+		display: none;
+	}
+
+	.placeholder {
+		height: 80px;
 	}
 }
