--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -11,6 +11,10 @@
 	overflow-y: hidden;
 }
 
+.container > h2 {
+	margin: 0;
+}
+
 .chatDisplayContainer {
 	background-color: black;
 	border-radius: 1rem;
