--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -2,45 +2,49 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	max-width: 100%;
-	height: calc(100vh - 1rem);
-	margin: auto;
-	background-color: rgb(42, 41, 41);
+	width: 100vw;
 	height: 100vh;
-	overflow: hidden;
+	padding: 0 10%;
+	background-color: rgb(42, 41, 41);
 }
 
+.imgContainer {
+	height: 100vh;
+	width: 65%;
+	margin: 0;
+	display: flex;
+	position: relative;
+}
 .mainImage {
-	top: 0px;
-	left: 0px;
-	/* width: 1025px;
-    height: 940px; */
-	/* background-position: left start; */
-	/* background-size: cover; */
-	/* background-repeat: no-repeat; */
 	object-fit: cover;
-}
-
-.formImage {
-	margin-top: 150px;
 }
 
 .container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: end;
+	justify-content: center;
 	background-color: black;
 	color: deepskyblue;
-	width: 25%;
-	height: 900px;
-	/* margin-top: 75px; */
+	width: 30%;
+	height: 100vh;
+	margin: 0;
 	padding: 20px;
 	border: 1px solid #ccc;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	/* background-color: lightgray;  */
 }
 
+.formImageContainer {
+	display: flex;
+	margin-top: 1rem;
+	position: relative;
+	padding-top: 3rem;
+}
+
+.formImage {
+	margin-top: 1rem;
+}
 .title {
 	font-size: 60px;
 	font-family: cursive;
@@ -53,7 +57,9 @@
 
 .form {
 	text-align: center;
-	padding: 70px 70px 150px;
+	padding: 10px 70px 150px;
+	justify-content: center;
+	align-items: center;
 }
 
 .formGroup {
@@ -62,7 +68,7 @@
 	justify-content: center;
 	margin-bottom: 45px;
 	width: 300px;
-	height: 40px;
+	height: 50px;
 	text-align: center;
 }
 
@@ -89,7 +95,7 @@
 	font-weight: bolder;
 	color: black;
 	width: 298px;
-	height: 40px;
+	height: 50px;
 	margin: auto;
 	background-color: aquamarine;
 	margin-bottom: 45px;
@@ -108,9 +114,10 @@
 	margin-top: 10px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (min-width: 650px) and (max-width: 825px) {
 	.mainContainer {
 		display: flex;
+		flex-wrap: wrap;
 		align-items: center;
 		justify-content: center;
 		max-width: 100%;
@@ -120,20 +127,15 @@
 	}
 
 	.mainImage {
-		top: 0px;
-		left: 0px;
-		width: 925px;
-		height: 940px;
-		/* background-position: left start; */
-		/* background-size: cover; */
-		/* background-repeat: no-repeat; */
 		object-fit: cover;
 	}
-
+	.formImageContainer {
+		display: flex;
+		margin-top: 1rem;
+		/* position: relative; */
+	}
 	.formImage {
-		margin-top: 150px;
-		width: 200px;
-		height: 150px;
+		margin-top: 1rem;
 	}
 
 	.container {
@@ -143,7 +145,7 @@
 		justify-content: end;
 		background-color: black;
 		color: deepskyblue;
-		width: 25%;
+		width: 100%;
 		height: 900px;
 		/* margin-top: 75px; */
 		padding: 20px;
@@ -175,6 +177,109 @@
 		width: 300px;
 		height: 40px;
 		text-align: center;
+		margin: auto;
+	}
+
+	.password {
+		display: block;
+		margin-bottom: 5px;
+	}
+
+	.label {
+		font-size: 25px;
+	}
+
+	.input {
+		width: 100%;
+		padding: 8px;
+		border: 1px solid #ccc;
+		border-radius: 3px;
+		box-sizing: border-box;
+		/* width: 350px; */
+	}
+
+	.button {
+		font-size: 20px;
+		font-weight: bolder;
+		color: black;
+		width: 298px;
+		height: 40px;
+		margin: auto;
+		background-color: aquamarine;
+		margin-bottom: 45px;
+		padding: 10px;
+		border: none;
+		border-radius: 3px;
+		cursor: pointer;
+	}
+}
+
+@media screen and (max-width: 750px) {
+	.mainContainer {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+		max-width: 100%;
+		height: calc(100vh - 1rem);
+		margin: auto;
+		background-color: rgb(42, 41, 41);
+	}
+
+	.mainImage {
+		top: 0px;
+		left: 0px;
+		width: 925px;
+		height: 940px;
+		object-fit: cover;
+	}
+
+	.formImage {
+		margin-top: 150px;
+		width: 200px;
+		height: 150px;
+	}
+
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: end;
+		background-color: black;
+		color: deepskyblue;
+		width: 100%;
+		height: 900px;
+		/* margin-top: 75px; */
+		padding: 20px;
+		border: 1px solid #ccc;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		/* background-color: lightgray;  */
+	}
+
+	.title {
+		font-size: 60px;
+		font-family: cursive;
+		font-weight: 900;
+	}
+
+	.header {
+		font-size: 40px;
+	}
+
+	.form {
+		text-align: center;
+		padding: 70px 70px 150px;
+	}
+
+	.formGroup {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-bottom: 45px;
+		width: 300px;
+		height: 40px;
+		text-align: center;
+		margin: auto;
 	}
 
 	.password {
@@ -226,21 +331,13 @@
 		align-items: center;
 		justify-content: center;
 		max-width: 100%;
-		height: calc(100vh - 1rem);
+		height: 100vh;
 		margin: auto;
 		background-color: rgb(42, 41, 41);
 	}
 
 	.mainImage {
 		display: none;
-		top: 0px;
-		left: 0px;
-		width: 1025px;
-		height: 940px;
-		/* background-position: left start; */
-		/* background-size: cover; */
-		/* background-repeat: no-repeat; */
-		object-fit: cover;
 	}
 
 	.formImage {
