--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -2,13 +2,13 @@
 	height: 100%;
 	background-color: rgb(42, 41, 41);
 	color: slategray;
-	margin: 0 0.5rem;
+	margin: 1.5rem 0.5rem;
 	border-radius: 1rem;
 	padding: 1rem 5rem 5rem;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	/* overflow-y: scroll; */
+	overflow-y: scroll;
 	/* scrollbar-width: none; */
 }
 
@@ -112,4 +112,18 @@
 	display: flex;
 	flex-direction: column;
 	margin-left: 2rem;
+}
+
+.editBtn {
+	font-size: 20px;
+	font-weight: bolder;
+	color: black;
+	width: 298px;
+	height: 50px;
+	margin: auto;
+	background-color: aquamarine;
+	padding: 10px;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
 }
