--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -8,8 +8,13 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	overflow-y: scroll;
 	/* scrollbar-width: none; */
+}
+
+.container {
+	overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
 }
 
 .profilePicture {
@@ -120,7 +125,7 @@
 	color: black;
 	width: 298px;
 	height: 50px;
-	margin: auto;
+	margin: 1rem auto;
 	background-color: aquamarine;
 	padding: 10px;
 	border: none;
