--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -23,7 +23,6 @@
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
-	margin-bottom: 20px;
 }
 
 .profileName {
@@ -121,11 +120,13 @@
 	margin-left: 2rem;
 }
 
-.editBtn {
-	font-size: 20px;
-	font-weight: bolder;
+.editBtn,
+.saveEditBtn,
+.cancelEditBtn {
+	font-size: 18px;
+	font-weight: bold;
 	color: black;
-	width: 298px;
+	width: 200px;
 	height: 50px;
 	margin: 1rem auto;
 	background-color: aquamarine;
@@ -133,4 +134,8 @@
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
+}
+
+.cancelEditBtn {
+	background-color: lightcoral;
 }
