--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -127,10 +127,9 @@
 	font-weight: bold;
 	color: black;
 	width: 200px;
-	height: 50px;
 	margin: 1rem auto;
 	background-color: aquamarine;
-	padding: 10px;
+	padding: 0.5rem;
 	border: none;
 	border-radius: 3px;
 	cursor: pointer;
