add input fields

--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -36,6 +36,15 @@
 	color: #666;
 }
 
+.profileDetail {
+	text-align: start;
+}
+
+.profileInputContainer {
+	display: flex;
+	align-items: center;
+}
+
 .profilePageContainer {
 	height: 100%;
 	display: flex;
