--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -16,7 +16,7 @@
 	overflow-y: scroll;
 	display: flex;
 	flex-direction: column;
-	margin: 2rem auto 0;
+	margin-top: 2rem;
 	text-align: center;
 }
 
@@ -120,6 +120,11 @@
 }
 
 .profileInfoTitle {
+	display: flex;
+	flex-direction: column;
+}
+
+.profileInputForm {
 	display: flex;
 	flex-direction: column;
 }
