add input styling

--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -44,6 +44,7 @@
 
 .profileDetail {
 	text-align: start;
+	display: flex;
 }
 
 .profileInputContainer {
@@ -124,7 +125,7 @@
 	display: flex;
 }
 
-.profileDetail {
+.profileEditDetail {
 	display: flex;
 	flex-direction: column;
 }
