add handleEditUser function

--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -143,17 +143,19 @@
 }
 
 .profileInputLabel {
-	width: 8rem;
+	width: 10rem;
 	height: 2rem;
 }
 
 .input {
 	width: 15rem;
 	height: 2rem;
+	margin-left: 3rem;
 }
 
 .textarea {
 	width: 15rem;
+	margin-left: 3rem;
 }
 
 .profileInfoDetail {
